--- a/src/app/signupform/signupform.component.css
+++ b/src/app/signupform/signupform.component.css
@@ -144,7 +144,6 @@
 
 @media (max-width: 576px) {
     body {
-        background-image: url('../../assets/homebg.jpg');
         background-size: cover;
         text-align: center;
         width: 100%;
@@ -152,14 +151,50 @@
         background-attachment: fixed;
     }
     .mat-toolbar {
-        background-color: #D62828;
         width: 100%;
+        height: 80px;
     }
-    .ayosgamit {
-        font-family: 'Candara';
-        font-size: 30px;
-        margin-left: 10px;
+    .menuBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+        display: none;
+    }
+    .menuBtn:hover,
+    .menuBtn:active {
+        color: #dd0346;
+        display: none;
+    }
+    .toolbarBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        margin: 25px;
+        margin-top: 30px;
+        display: none;
+    }
+    .toolbarBtn:hover,
+    .toolbarBtn:active {
+        color: #dd0346;
+        display: none;
+    }
+    .loginBtn {
+        float: right !important;
+        width: 140px;
+        height: 40px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #dd0346;
         color: #FFFFFF;
+        font-size: 15px;
+        display: none;
+    }
+    .loginBtn:hover,
+    .loginBtn:active {
+        color: #f9dcc4;
+        display: none;
     }
     .container {
         height: 100%;
@@ -167,15 +202,11 @@
         justify-content: center;
         align-items: center;
     }
-    .mat-toolbar {
-        background-color: #D62828;
-        width: 100%;
-    }
-    .ayosgamit {
-        font-family: 'Candara';
-        font-size: 30px;
-        margin-left: 10px;
-        color: #FFFFFF;
+    .title {
+        text-align: center;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 27px;
+        color: #590D22;
     }
     .signincard {
         width: 70%;
@@ -185,17 +216,23 @@
         justify-content: center;
         opacity: 1;
     }
+    .loginvector {
+        width: 30%;
+        margin-top: 60px !important;
+        float: left;
+        margin-left: 200px;
+        display: none;
+    }
     .mat-tab-group {
         margin-top: 20px;
         width: 190px;
         text-align: center !important;
     }
     .logo {
-        height: 40%;
-        width: 40%;
-        float: left;
-        margin-left: 120px;
-        margin-top: 40px;
+        width: 50%;
+        position: center !important;
+        margin-top: 10px !important;
+        margin: auto;
     }
     .signup-fnamefield {
         min-height: 40px;
@@ -229,7 +266,7 @@
         margin: auto;
     }
     .signupBtn {
-        background-color: #D62828;
+        background-color: #dd0346;
         color: #FFFFFF;
         height: 10%;
         width: 85%;
