updated rate button

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -182,7 +182,8 @@
                                     <td>{{cr.service_type}}</td>
                                     <td>{{cr.status}}</td>
                                     <td>
-                                        <button mat-stroked-button class="rateBtn" [routerLink]="['/completed/' + cr._id]">Rate</button></td>
+                                        <button mat-stroked-button class="rateBtn" [routerLink]="['/completed/' + cr._id]">Rate</button>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
