--- a/src/app/menu-fan/menu-fan.component.css
+++ b/src/app/menu-fan/menu-fan.component.css
@@ -19,18 +19,6 @@
         width: 100%;
         height: 80px;
     }
-    .menuBtn {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: #003049;
-        font-size: 17px;
-        float: left;
-        margin: 30px;
-        margin-top: 40px;
-    }
-    .menuBtn:hover,
-    .menuBtn:active {
-        color: #dd0346;
-    }
     .toolbarBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #003049;
@@ -56,8 +44,23 @@
     .loginBtn:active {
         color: #f9dcc4;
     }
-    .mat-icon {
-        font-size: 20px;
+    .menuBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+        display: flex;
+    }
+    .menuBtn:hover,
+    .menuBtn:active {
+        color: #dd0346;
+    }
+    .ourservices {
+        font-size: 30px;
+        margin-top: 2px !important;
+        display: flex;
     }
     .mat-card {
         width: 1000px;
