--- a/src/app/menu-washing/menu-washing.component.html
+++ b/src/app/menu-washing/menu-washing.component.html
@@ -1,7 +1,7 @@
 <body>
     <mat-toolbar>
         <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
-        <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></label>
+        <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon class="ourservices">expand_more</mat-icon></label>
         <mat-menu #menu="matMenu">
             <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
             <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
