updated no footer

--- a/src/app/menu-fan/menu-fan.component.html
+++ b/src/app/menu-fan/menu-fan.component.html
@@ -67,4 +67,4 @@
 
     </div>
 </body>
-<footer class="footer">© 2021 Ayosgamit - All Rights Reserved</footer>
+<!-- <footer class="footer">© 2021 Ayosgamit - All Rights Reserved</footer> -->
