--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -182,4 +182,4 @@
         </mat-tab>
     </mat-tab-group>
 </body>
-<footer class="footer">© 2021 Ayosgamit - All Rights Reserved</footer>
+<!-- <footer class="footer">© 2021 Ayosgamit - All Rights Reserved</footer> -->
