--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -41,4 +41,4 @@
         </mat-card>
     </div>
 </body>
-<footer class="footer">© 2021 Ayosgamit - All Rights Reserved</footer>
+<!-- <footer class="footer">© 2021 Ayosgamit - All Rights Reserved</footer> -->
