--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -52,16 +52,23 @@
           </button>
         </mat-toolbar>
         <mat-card class="activecard">
-            <h1 class="activetitle"> Feedbacks </h1>
-            <label class="label2">View list of feedbacks.</label>
+
+            <div>
+
+                <img class="feedbackvector" mat-card-image src="../../assets/likeimg.png">
+
+                <h1 class="activetitle"> Feedbacks </h1>
+                <label class="label2">View list of feedbacks.</label>
+
+            </div>
             <div class="table">
                 <table>
                     <thead>
                         <tr>
-                            <th scope="col" class="header">Email</th>
-                            <th scope="col" class="header">First Name</th>
-                            <th scope="col" class="header">Last Name</th>
-                            <th scope="col" class="header">Feedback</th>
+                            <th scope="col" class="header1">Email</th>
+                            <th scope="col" class="header1">First Name</th>
+                            <th scope="col" class="header1">Last Name</th>
+                            <th scope="col" class="header1">Feedback</th>
                         </tr>
                     </thead>
                     <tbody class="body">
