--- a/src/app/feedback/feedback.component.css
+++ b/src/app/feedback/feedback.component.css
@@ -229,8 +229,9 @@
     .label2 {
         color: grey;
         font-size: 16px;
-        margin-top: -5px;
-        margin-left: 45px;
+        margin-top: 75px;
+        float: left;
+        margin-left: -115px;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     .technician1 {
@@ -240,25 +241,23 @@
         margin-top: 50px;
         border: 2px;
     }
-    .vector {
-        width: 35%;
-        margin-top: -110px !important;
-        float: left;
-        margin-left: -60px;
-    }
     .activecard {
-        width: 1000px;
-        height: 500px;
+        width: 1100px;
+        height: 700px;
         margin: auto;
-        margin-top: 100px;
-        overflow: scroll;
+        margin-top: 50px;
     }
     .activetitle {
         color: #b65e79;
         font-size: 25px;
-        margin-top: 15px !important;
-        margin-left: 45px !important;
+        float: left;
+        margin-top: 45px !important;
+        margin-left: 15px !important;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .feedbackvector {
+        width: 20%;
+        float: left;
     }
     .listofnames {
         margin-top: 60px !important;
@@ -323,9 +322,20 @@
         margin: auto;
         margin-top: -45px;
     }
+    th,
+    tr,
+    td {
+        border: none;
+    }
     table {
         width: 700px;
-        margin: auto;
-        margin-top: 10px;
+        margin-top: 180px;
+        border: none;
+    }
+    .header1 {
+        margin-right: 50px;
+        border: none;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #b65e79;
     }
 }
