--- a/src/app/bookingsummary/bookingsummary.component.html
+++ b/src/app/bookingsummary/bookingsummary.component.html
@@ -85,6 +85,16 @@
                 <td class="body4">{{service.service_instruction}}</td>
             </tr>
         </tbody>
+        <thead>
+            <tr>
+                <th class="header4">Special Instruction/Request</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="body4">{{service.special_instruct}}</td>
+            </tr>
+        </tbody>
     </table>
 </mat-card>
 
