--- a/src/app/paymentthankyou/paymentthankyou.component.html
+++ b/src/app/paymentthankyou/paymentthankyou.component.html
@@ -25,7 +25,7 @@
         <h1 class="successtxt">Thank You for Booking!</h1>
 
         <div class="description">
-            <p class="description1">Service request ID: {{service._id | slice:0:9}} </p>
+            <p class="description1"><b>Service request ID: {{service._id | slice:0:9}}</b> </p>
             <p class="description2">Your service request is pending.</p>
 
             <p class="description3">It could take a few minutes to show up in your dashboard.</p>
