--- a/src/app/request-complete/request-complete.component.html
+++ b/src/app/request-complete/request-complete.component.html
@@ -138,7 +138,16 @@
                                 <td class="body2">{{data.service_date | date}}</td>
                                 <td class="body2">{{data.service_timeslot}}</td>
                                 <td class="body2">{{data.service_instruction}}</td>
-
+                            </tr>
+                        </tbody>
+                        <thead>
+                            <tr>
+                                <th class="header2">Special Instruction/Request</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="body2">{{data.special_instruct}}</td>
                             </tr>
                         </tbody>
                     </table>
