--- a/src/app/requestdetails-admin/requestdetails-admin.component.html
+++ b/src/app/requestdetails-admin/requestdetails-admin.component.html
@@ -147,6 +147,16 @@
                             <td class="body2">{{request.service_instruction}}</td>
                         </tr>
                     </tbody>
+                    <thead>
+                        <tr>
+                            <th class="header2">Special Instruction/Request</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="body2">{{request.special_instruct}}</td>
+                        </tr>
+                    </tbody>
                 </table>
             </mat-card>
 
