--- a/src/app/requestdetails-complete/requestdetails-complete.component.css
+++ b/src/app/requestdetails-complete/requestdetails-complete.component.css
@@ -160,7 +160,7 @@
     }
     .summary {
         width: 900px;
-        height: 650px;
+        height: 700;
         margin-top: 50px !important;
         position: center !important;
         margin: auto;
