--- a/src/app/requestdetails-pending/requestdetails-pending.component.html
+++ b/src/app/requestdetails-pending/requestdetails-pending.component.html
@@ -132,6 +132,16 @@
                                 <td class="body2">{{data.service_instruction}}</td>
                             </tr>
                         </tbody>
+                        <thead>
+                            <tr>
+                                <th class="header2">Special Instruction/Request</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="body2">{{data.special_instruct}}</td>
+                            </tr>
+                        </tbody>
                     </table>
                 </mat-card>
             </div>
