--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -148,7 +148,7 @@
                                     <td>{{ar.service_appliance}}</td>
                                     <td>{{ar.service_type}}</td>
                                     <td>{{ar.status}}</td>
-                                    <td><button mat-raised-button [routerLink]="['/requestdetails/' + ar._id]">Details</button></td>
+                                    <td><button mat-raised-button class="detailsBtn" [routerLink]="['/requestdetails/' + ar._id]">Details</button></td>
                                 </tr>
                             </tbody>
                         </table>
