--- a/src/app/bookingsummary/bookingsummary.component.html
+++ b/src/app/bookingsummary/bookingsummary.component.html
@@ -141,10 +141,18 @@
 
 
 
-<div class="termschkbox">
+<!-- <div class="termschkbox">
 
     <div>
 
         <button mat-raised-button class="submitBtn" (click)="goPayment()">Proceed to payment</button>
     </div>
+</div> -->
+
+<div class="termschkbox">
+    <mat-checkbox #confirmed>I agree to Ayosgamit <b>Terms and Conditions.</b></mat-checkbox>
+    <br>
+    <div *ngIf="!confirmed.checked; then disable else enable"></div>
+    <ng-template #disable><button mat-stroked-button class="submitBtn-disabled" [disabled]="!confirmed.checked">Proceed</button></ng-template>
+    <ng-template #enable><button mat-raised-button class="submitBtn" (click)="goPayment()">Proceed</button></ng-template>
 </div>
