--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -38,6 +38,10 @@
             </div>
 
         </mat-nav-list>
+
+        <div class="termsside" routerLink="/termsandconditions">
+            <a class="termstxt">Privacy | Terms and Conditions</a>
+        </div>
     </mat-sidenav>
 
     <mat-sidenav-content>
