--- a/src/app/washingmachine-install/washingmachine-install.component.html
+++ b/src/app/washingmachine-install/washingmachine-install.component.html
@@ -326,14 +326,10 @@
                                 <!--Instructions-->
                                 <mat-form-field class="instructions" appearance="outline">
                                     <mat-label>Instructions</mat-label>
-                                    <input matInput formControlName="service_instruction" [errorStateMatcher]="matcher" placeholder="Any instruction to the technician?" autocomplete="off">
+                                    <input matInput formControlName="service_instruction" [errorStateMatcher]="matcher" placeholder="Leave us an instruction" autocomplete="off">
                                     <mat-error *ngIf="contactDetialsForm.get('service_instruction').hasError('required')">
-                                        Any instructions?
+
                                     </mat-error>
-                                </mat-form-field>
-                                <mat-form-field class="instructions" appearance="outline">
-                                    <mat-label>Special Instruction (Optional)</mat-label>
-                                    <input matInput formControlName="special_instruction" [errorStateMatcher]="matcher" placeholder="Any special instruction/request?" autocomplete="off">
                                 </mat-form-field>
                             </div>
                         </mat-card>
