--- a/src/app/bookingsummary/bookingsummary.component.css
+++ b/src/app/bookingsummary/bookingsummary.component.css
@@ -244,27 +244,29 @@
         font-size: 17px;
     }
     .submitBtn {
-        width: 180px;
+        width: 120px;
         height: 50px;
         background-color: #fcb42a;
         color: #FFFFFF;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 16px;
+        font-size: 18px;
         text-align: center;
         margin-top: 20px;
+        margin-bottom: 50px;
     }
     .submitBtn:hover,
     .submitBtn:active {
         color: #14213D;
     }
     .submitBtn-disabled {
-        width: 180px;
+        width: 120px;
         height: 50px;
         border-color: #fcb42a !important;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 16px;
+        font-size: 18px;
         text-align: center;
         margin-top: 20px;
+        margin-bottom: 50px;
     }
     .cancelBtn {
         width: 120px;
