--- a/src/app/appliance-cleaning/appliance-cleaning.component.html
+++ b/src/app/appliance-cleaning/appliance-cleaning.component.html
@@ -27,7 +27,12 @@
                     <a class="profile-btn" routerLink="/profile">Profile</a>
                 </mat-list-item>
             </div>
-
+            <div class="termside" routerLink="/termsandconditions">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">announcement</mat-icon>
+                    <a class="term-btn">Privacy | Terms and Conditions</a>
+                </mat-list-item>
+            </div>
             <div class="logoutside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon">exit_to_app</mat-icon>
