--- a/src/app/profileform/profileform.component.css
+++ b/src/app/profileform/profileform.component.css
@@ -108,6 +108,25 @@
         margin-left: 20px;
         margin-top: 25px;
     }
+    .termside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .termside:hover {
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .term-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
     .logoutside {
         margin-left: 0px;
         margin-top: 30px;
