--- a/src/app/termsandconditions/termsandconditions.component.css
+++ b/src/app/termsandconditions/termsandconditions.component.css
@@ -1,76 +1,193 @@
-mat-toolbar {
+.sidenav-container {
+    height: 100%;
+}
+
+.sidenav {
+    width: fit-content;
+    width: 250px;
+    background-color: #FFFFFF;
+}
+
+.mat-sidenav-content {
+    height: 910px;
+    background-color: white;
+}
+
+.mat-toolbar {
+    background-color: #DD0346;
     width: 100%;
-    height: 80px;
+    height: 100px;
+    box-shadow: 0 3px 2px -2px rgba(0, 0, 0, .2);
 }
 
 .logo {
     max-width: 200px;
     height: 100px !important;
-    margin-left: 30px !important;
-    margin-top: 20px !important;
-}
-
-.menuBtn {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #003049;
-    font-size: 17px;
     float: left;
-    margin: 30px;
-    margin-top: 40px;
-    display: flex;
+    margin-top: -20px !important;
+    margin-left: 25px;
 }
 
-.menuBtn:hover,
-.menuBtn:active {
-    color: #dd0346;
+.adminvector {
+    width: 95%;
+    margin-top: -60px !important;
+    margin-left: 10px;
 }
 
-mat-icon {
-    font-size: 30px;
-    margin-top: 2px !important;
-    display: flex;
-}
-
-.pricingBtn {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.sidetitle {
     color: #003049;
-    float: left;
-    margin: 30px;
-    margin-top: 40px;
-    font-size: 17px;
-}
-
-.pricingBtn:hover,
-.pricingBtn:active {
-    color: #dd0346;
-}
-
-.contactUsBtn {
+    font-size: 20px;
+    margin-top: -10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+
+.nav-icon {
     color: #003049;
-    font-size: 17px;
-    float: left;
-    margin: 30px;
-    margin-top: 40px;
+    font-size: 28px;
+    margin-left: 20px;
+    margin-top: 15px;
 }
 
-.contactUsBtn:hover,
-.contactUsBtn:active {
-    color: #dd0346;
+mat-list-item {
+    background-color: transparent !important;
 }
 
-.aboutusBtn {
+.dashboardside {
+    margin-left: 0px;
+    margin-top: 30px;
+    text-align: justify;
+}
+
+.dashboard-btn {
+    color: #003049;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #003049;
-    font-size: 17px;
-    float: left;
-    margin: 30px;
-    margin-top: 40px;
+    font-size: 16px;
+    margin-left: 20px;
+    margin-top: 25px;
+    text-decoration: none;
 }
 
-.aboutusBtn:hover,
-.aboutusBtn:active {
-    color: #dd0346;
+.dashboardside:hover {
+    background-color: #D6B2BD;
+    border-radius: 20px;
+    width: 100%;
+    height: 70px;
+    text-align: center !important;
+}
+
+.bookingside {
+    margin-left: 0px;
+    margin-top: 30px;
+    text-align: justify;
+}
+
+.bookingside:hover {
+    background-color: #D6B2BD;
+    color: #FFFFFF;
+    border-radius: 20px;
+    width: 100%;
+    height: 70px;
+    text-align: center !important;
+}
+
+.booking-btn {
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    margin-left: 20px;
+    margin-top: 25px;
+}
+
+.profileside {
+    margin-left: 0px;
+    margin-top: 30px;
+    text-align: justify;
+}
+
+.profileside:hover {
+    background-color: #D6B2BD;
+    border-radius: 20px;
+    width: 100%;
+    height: 70px;
+    text-align: center !important;
+}
+
+.profile-btn {
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    margin-left: 20px;
+    margin-top: 25px;
+}
+
+.termside {
+    margin-left: 0px;
+    margin-top: 50px;
+    text-align: justify;
+    background-color: #D6B2BD;
+    border-radius: 20px;
+    width: 100%;
+    height: 70px;
+}
+
+.termside:hover {
+    margin-left: 0px;
+    margin-top: 50px;
+    text-align: justify;
+    background-color: #D6B2BD;
+    border-radius: 20px;
+    width: 100%;
+    height: 70px;
+}
+
+.term-btn {
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    margin-left: 20px;
+    margin-top: 25px;
+}
+
+.logoutside {
+    margin-left: 0px;
+    margin-top: 30px;
+    text-align: justify;
+}
+
+.logout-btn {
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: -5px;
+    font-size: 16px;
+    margin-left: 20px;
+    margin-top: 25px;
+}
+
+.logoutside:hover {
+    background-color: #D6B2BD;
+    color: #FFFFFF;
+    border-radius: 20px;
+    width: 100%;
+    height: 70px;
+    text-align: center !important;
+}
+
+.termsside {
+    margin-top: 240px;
+    margin-left: 30px;
+}
+
+.termstxt {
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 13px;
+    text-decoration: none;
+    display: inline;
+}
+
+.spacer {
+    flex: 1 1 auto;
 }
 
 .termscard {
