--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -56,7 +56,7 @@
                 <h1 class="dashtitle">Welcome to AyosGamit!</h1>
                 <label class="dashtitle2">Hire trained and certified technicians.</label>
 
-                <button mat-raised-button class="startBtn" routerLink="/booking">Get Started</button>
+                <button mat-raised-button class="startBtn" routerLink="/bookingform">Get Started</button>
             </div>
         </mat-toolbar>
 
